--- a/Exercises/02 Exercises.ipynb
+++ b/Exercises/02 Exercises.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -110,7 +110,29 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 4.5 -0.375\n",
+      "1 5.25 12.328125\n",
+      "2 4.875 4.763671875\n",
+      "3 4.6875 1.910888671875\n",
+      "4 4.59375 0.699554443359375\n",
+      "5 4.546875 0.14548873901367188\n",
+      "6 4.5234375 -0.11891412734985352\n",
+      "7 4.53515625 0.01224285364151001\n",
+      "8 4.529296875 -0.053596146404743195\n",
+      "9 4.5322265625 -0.020741849206387997\n",
+      "10 4.53369140625 -0.0042658079182729125\n",
+      "11 4.534423828125 0.003984444148954935\n",
+      "12 4.5340576171875 -0.0001417014154867502\n",
+      "13 4.53424072265625 0.0019211164656098845\n",
+      "14 4.534149169921875 0.0008896438020826736\n"
+     ]
+    }
+   ],
    "source": [
     "# Initial end points\n",
     "x0 = 3.0\n",
@@ -126,7 +148,10 @@
     "    f = x_mid**3 - 6*x_mid**2 + 4*x_mid + 12\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    if f0 * f < 0:\n",
+    "        x1 = x_mid\n",
+    "    else:\n",
+    "        x0 = x_mid\n",
     "\n",
     "    print(n, x_mid, f)"
    ]
@@ -167,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -180,7 +205,37 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 4.5 0.375\n",
+      "0 5.25 12.328125\n",
+      "0 4.875 4.763671875\n",
+      "0 4.6875 1.910888671875\n",
+      "0 4.59375 0.699554443359375\n",
+      "0 4.546875 0.14548873901367188\n",
+      "0 4.5234375 0.11891412734985352\n",
+      "0 4.53515625 0.01224285364151001\n",
+      "0 4.529296875 0.053596146404743195\n",
+      "0 4.5322265625 0.020741849206387997\n",
+      "0 4.53369140625 0.0042658079182729125\n",
+      "0 4.534423828125 0.003984444148954935\n",
+      "0 4.5340576171875 0.0001417014154867502\n",
+      "0 4.53424072265625 0.0019211164656098845\n",
+      "0 4.534149169921875 0.0008896438020826736\n",
+      "0 4.5341033935546875 0.0003739552628445608\n",
+      "0 4.534080505371094 0.0001161229410939768\n",
+      "0 4.534069061279297 1.2790232830184323e-05\n",
+      "0 4.534074783325195 5.166610522167048e-05\n",
+      "0 4.534071922302246 1.9437873959304852e-05\n",
+      "0 4.5340704917907715 3.3238050036743516e-06\n",
+      "0 4.534069776535034 4.7332178070291775e-06\n",
+      "0 4.534070134162903 7.047073751209609e-07\n"
+     ]
+    }
+   ],
    "source": [
     "# Initial end points\n",
     "x0 = 3.0\n",
@@ -193,7 +248,21 @@
     "counter = 0\n",
     "while error > tol:\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
+    "    # Compute midpoint\n",
+    "    x_mid = (x0 + x1)/2\n",
+    "\n",
+    "    # Evaluate function at left end-point and at midpoint\n",
+    "    f0 = x0**3 - 6*x0**2 + 4*x0 + 12\n",
+    "    f = x_mid**3 - 6*x_mid**2 + 4*x_mid + 12\n",
+    "    \n",
+    "    # YOUR CODE HERE\n",
+    "    if f0 * f < 0:\n",
+    "        x1 = x_mid\n",
+    "    else:\n",
+    "        x0 = x_mid\n",
+    "        \n",
+    "    error = abs(f)\n",
     "\n",
     "    # Guard against an infinite loop\n",
     "    if counter > 1000:\n",
@@ -273,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -286,7 +355,31 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.71238898038469\n",
+      "11.728641652283956\n",
+      "7.636666525534631\n",
+      "2.602329768407337\n",
+      "0.555634071762265\n",
+      "0.08189021082585013\n",
+      "0.008861411268856534\n",
+      "0.0007351881114854297\n",
+      "4.829695774011267e-05\n",
+      "2.5759875719177927e-06\n",
+      "1.1381159747969605e-07\n",
+      "4.234491202126378e-09\n",
+      "1.345145106412815e-10\n",
+      "3.6917136014835705e-12\n",
+      "8.79296635503124e-14\n",
+      "The error is:\n",
+      "8.79296635503124e-14\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the math module to access math.sin and math.factorial\n",
     "import math\n",
@@ -298,7 +391,10 @@
     "approx_sin = 0.0\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "for n in range(15):\n",
+    "    approx_sin += ((-1)**n) * (x**(2*n + 1)) / (math.factorial(2*n + 1))\n",
+    "    error = abs(math.sin(x) - approx_sin)\n",
+    "    print(error)\n",
     "    \n",
     "print(\"The error is:\")\n",
     "print(error)"
@@ -337,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -350,7 +446,30 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.71238898038469\n",
+      "11.728641652283956\n",
+      "7.636666525534631\n",
+      "2.602329768407337\n",
+      "0.555634071762265\n",
+      "0.08189021082585013\n",
+      "0.008861411268856534\n",
+      "0.0007351881114854297\n",
+      "4.829695774011267e-05\n",
+      "2.5759875719177927e-06\n",
+      "1.1381159747969605e-07\n",
+      "4.234491202126378e-09\n",
+      "The error is:\n",
+      "4.234491202126378e-09\n",
+      "Number of terms in series:\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the math module to access math.sin and math.factorial\n",
     "import math\n",
@@ -373,7 +492,9 @@
     "while error > tol and n < 1000:\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    approx_sin += ((-1)**n) * (x**(2*n + 1)) / (math.factorial(2*n + 1))\n",
+    "    error = abs(math.sin(x) - approx_sin)\n",
+    "    print(error)\n",
     "    \n",
     "    # Increment counter\n",
     "    n += 1    \n",
@@ -425,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
