--- a/Exercises/01 Exercises.ipynb
+++ b/Exercises/01 Exercises.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -33,11 +33,20 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.555555555555557\n"
+     ]
+    }
+   ],
    "source": [
     "T_f = 78\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "T_c = 5*(T_f-32)/9\n",
+    "print (T_c)"
    ]
   },
   {
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -98,13 +107,24 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "248.75\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign data to variables\n",
     "principal = 150000\n",
+    "BoE_rate = 0.005\n",
+    "rate_over_BoE_rate = 0.0149\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "interest = principal * (BoE_rate + rate_over_BoE_rate) / 12\n",
+    "print (interest)"
    ]
   },
   {
@@ -146,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
