--- a/03 Types, type conversions and floating point arithmetic.ipynb
+++ b/03 Types, type conversions and floating point arithmetic.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +252,8 @@
     }
    ],
    "source": [
-    "# Get first six characters, print and check type\n",
-    "s3 = my_string[0:6]\n",
+    "#### Get first six characters, print and check type\n",
+    "s3 = my_string[:6]\n",
     "print(s3)\n",
     "print(type(s3))\n",
     "\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
     "a = 2j\n",
     "print(a, type(a))\n",
     "\n",
-    "b = 4 - 3j\n",
+    "b = 4 - 3J\n",
     "print(b, type(b))"
    ]
   },
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,8 @@
      "output_type": "stream",
      "text": [
       "15.0718.07\n",
-      "33.14\n"
+      "33.14\n",
+      "33\n"
      ]
     }
    ],
@@ -949,7 +950,8 @@
     "b = \"18.07\"\n",
     "\n",
     "print(a + b)\n",
-    "print(float(a) + float(b))"
+    "print(float(a) + float(b))\n",
+    "print(int(float(a)) + int(float(b))) # However this works haha"
    ]
   },
   {
@@ -1002,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1148,14 +1150,19 @@
      "text": [
       "0b10\n",
       "0b110\n",
-      "0b1101110\n"
+      "0b1101110\n",
+      "0xff\n",
+      "0o24\n"
      ]
     }
    ],
    "source": [
     "print(bin(2))\n",
     "print(bin(6))\n",
-    "print(bin(110))"
+    "print(bin(110))\n",
+    "\n",
+    "print(hex(255))\n",
+    "print(oct(20))"
    ]
   },
   {
@@ -1189,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1286,13 +1293,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "x in 30 characters: \n",
+      "0.100000000000000005551115123126\n",
       "0.10000000000000009\n",
       "0.10000000000000098\n",
       "0.10000000000001075\n",
@@ -1318,6 +1327,8 @@
    ],
    "source": [
     "x = 0.1\n",
+    "print('x in 30 characters: ')\n",
+    "print('{0:.30f}'.format(x))\n",
     "for i in range(20):\n",
     "    x = x*11 - 1\n",
     "    print(x)"
@@ -1389,13 +1400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.10000000149011611938476562500000000000000000000000\n",
       "0.10000001639127731\n",
       "0.10000018030405045\n",
       "0.1000019833445549\n",
@@ -1421,6 +1433,7 @@
    ],
    "source": [
     "x = np.float32(0.1)\n",
+    "print('{0:.50f}'.format(x))\n",
     "for i in range(20):\n",
     "    x = x*11 - 1\n",
     "    print(x)"
@@ -1452,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
