--- a/Exercises/02 Exercises.ipynb
+++ b/Exercises/02 Exercises.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -35,10 +35,31 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Did you try?\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "score = 30\n",
+    "\n",
+    "if score > 100 or score < 0:\n",
+    "    print(\"Error - invalid input\")\n",
+    "elif score >= 82:\n",
+    "    print(\"Excellent\")\n",
+    "elif score >= 76.5:\n",
+    "    print(\"Very Good\")\n",
+    "elif score >= 66:\n",
+    "    print(\"Good\")\n",
+    "elif score >= 45:\n",
+    "    print(\"Need improvement\")\n",
+    "else:\n",
+    "    print(\"Did you try?\")"
    ]
   },
   {
