--- a/Exercises/03 Exercises.ipynb
+++ b/Exercises/03 Exercises.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -51,15 +51,55 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "3.552713678800501e-15\n",
+      "16 bit error:\n",
+      "-0.01220703125\n",
+      "32 bit error:\n",
+      "7.450580596923828e-07\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "a = 100\n",
+    "b = 0.1\n",
+    "c = 0.2\n",
+    "\n",
+    "d0 = a*b + a*c\n",
+    "d1 = a*(b+c)\n",
+    "\n",
+    "print(d0 == d1)\n",
+    "print(d1 - d0)\n",
+    "# This is because the binary approximation of 0.3 is difference of the sum of that of 0.1 and 0.2, \n",
+    "# in python's 64bit float system\n",
+    "# We can try 32 bit and 16 bit to see the results\n",
+    "b = np.float16(0.1)\n",
+    "c = np.float16(0.2)\n",
+    "d0 = a*b + a*c\n",
+    "d1 = a*(b+c)\n",
+    "print(\"16 bit error:\")\n",
+    "print(d1 - d0)\n",
+    "\n",
+    "b = np.float32(0.1)\n",
+    "c = np.float32(0.2)\n",
+    "d0 = a*b + a*c\n",
+    "d1 = a*(b+c)\n",
+    "print(\"32 bit error:\")\n",
+    "print(d1 - d0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -115,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -128,18 +168,33 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compact form:  65944160.60120103\n",
+      "Expanded form:  65944160.601201\n",
+      "-2.9802322387695312e-08\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10.0\n",
     "y = 10.1\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "f0 = (x+y)**6\n",
+    "f1 = (x**6) + 6*(x**5)*(y**1) + 15*(x**4)*(y**2) + 20*(x**3)*(y**3) + 15*(x**2)*(y**4) + 6*(x**1)*(y**5) +(y**6)\n",
+    "\n",
+    "print(\"Compact form: \", f0)\n",
+    "print(\"Expanded form: \", f1)\n",
+    "print(f1-f0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -170,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -183,18 +238,33 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compact form:  9.999999999999788e-07\n",
+      "Expanded form:  9.958166629076004e-07\n",
+      "-4.183337092378376e-09\n"
+     ]
+    }
+   ],
    "source": [
     "x = 10.0\n",
     "y = -10.1\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "f0 = (x+y)**6\n",
+    "f1 = (x**6) + 6*(x**5)*(y**1) + 15*(x**4)*(y**2) + 20*(x**3)*(y**3) + 15*(x**2)*(y**4) + 6*(x**1)*(y**5) +(y**6)\n",
+    "\n",
+    "print(\"Compact form: \", f0)\n",
+    "print(\"Expanded form: \", f1)\n",
+    "print(f1-f0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -259,10 +329,26 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-19884107.85185185\n",
+      "-19999999.999999948\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "import math\n",
+    "x = 1e7\n",
+    "\n",
+    "original_form = 1/(math.sqrt(x**2 -1) - x)\n",
+    "print(original_form)\n",
+    "\n",
+    "new_form = - math.sqrt(x**2 - 1) - x\n",
+    "print(new_form)\n"
    ]
   },
   {
@@ -286,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -300,10 +386,28 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2000000000.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "x = 1e9\n",
+    "\n",
+    "#original_form = 1/(math.sqrt(x**2 -1) - x)\n",
+    "#print(original_form)\n",
+    "\n",
+    "new_form = - math.sqrt(x**2 - 1) - x\n",
+    "print(new_form)\n",
+    "\n",
+    "original_form_denominator = (math.sqrt(x**2 -1) - x)\n",
+    "print(original_form_denominator)\n"
    ]
   }
  ],
@@ -323,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
