--- a/04 Functions.ipynb
+++ b/04 Functions.ipynb
@@ -29,9 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "21\n"
+     ]
+    }
+   ],
    "source": [
     "def sum_and_increment(a, b):\n",
     "    \"\"\"\"Return the sum of a and b, plus 1\"\"\"\n",
@@ -108,9 +117,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case A: 3 values\n",
+      "0\n",
+      "1\n",
+      "8\n",
+      "Case B: 12 values\n",
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "def process_value(x):\n",
     "    \"Return a value that depends on the input value x \"\n",
@@ -155,9 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "def subtract_and_increment(a, b):\n",
     "    \"Return a minus b, plus 1\"\n",
@@ -180,9 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "print(subtract_and_increment(a=alpha, b=beta))  # Expect -1\n",
     "print(subtract_and_increment(b=beta, a=alpha))  # Expect -1"
@@ -207,9 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "def f0(x):\n",
     "    \"Compute x^2 - 1\"\n",
@@ -261,9 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8038\n"
+     ]
+    }
+   ],
    "source": [
     "def position(t, r0, v0=0.0, a=-9.81):\n",
     "    \"Compute position of an accelerating particle.\"\n",
@@ -302,9 +370,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8044\n"
+     ]
+    }
+   ],
    "source": [
     "# Position after 0.2 s (t) when dropped from a height of  1 m (r0)\n",
     "p = position(0.2, 1, a=-9.78)\n",
@@ -322,9 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-20 0.5 -6.466666666666666\n"
+     ]
+    }
+   ],
    "source": [
     "def compute_max_min_mean(x0, x1, x2):\n",
     "    \"Return maximum, minimum and mean values\"\n",
@@ -369,9 +453,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A simple function\n",
+      "10.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign 10.0 to the varibale a\n",
     "a = 10.0\n",
@@ -384,6 +477,8 @@
     "\n",
     "# Call the function\n",
     "b = dummy()\n",
+    "# This should be a normal print:\n",
+    "print(b)\n",
     "\n",
     "# Check that the function declaration of 'a' has not affected \n",
     "# the variable 'a' outside of the function\n",
@@ -437,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -552,6 +647,7 @@
     "def mult_by_two(a):\n",
     "    a *= 2\n",
     "    print(\"Value of variable \\'a\\' inside function:\", a)\n",
+    "    # return a # This doesn't work unless below used a = mult_by_two(a)\n",
     "    \n",
     "a = 5\n",
     "mult_by_two(a)\n",
@@ -569,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
