--- a/Exercises/04 Exercises.ipynb
+++ b/Exercises/04 Exercises.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -40,12 +40,15 @@
    "source": [
     "def is_odd(x):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    if x%2 == 1:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -106,16 +109,29 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def magnitude(a,b,c = 0):\n",
+    "    return math.sqrt(a**2 + b**2 + c**2)\n",
+    "\n",
+    "print(magnitude(3,4,0))\n",
+    "print(magnitude(3,4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -169,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -185,12 +201,14 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def area(x0, y0, x1, y1, x2, y2):\n",
+    "    return abs(x0*(y1-y2) + x1*(y2-y0) + x2*(y0-y1))/2\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -247,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -261,7 +279,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference factorial: 120\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "print(\"Reference factorial:\", math.factorial(5))"
@@ -269,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -282,10 +308,23 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 5: 120\n",
+      "Reference value of factorial of 5: 120\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "def factorial(n):\n",
+    "    if n==0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return (n*factorial(n-1))\n",
     "    \n",
     "print(\"Factorial of 5:\", factorial(5))\n",
     "\n",
@@ -295,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -376,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -406,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -421,17 +460,70 @@
    },
    "outputs": [],
    "source": [
-    "def compute_root(f, x0, x1, tol, max_it):\n",
-    "    \"Compute roots of a function using bisection\"\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "     \n",
-    "    return x_mid, f_mid, it"
+    "def testf(x):\n",
+    "    return x**2 - 16"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
+   "metadata": {
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "3a24916f619f77367d88ef3156d1e0a8",
+     "grade": false,
+     "grade_id": "cell-622edcb129dcc7f2",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0000001192092896 9.536743306171047e-07 23\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_root(f, x0, x1, tol, max_it):\n",
+    "    \"Compute roots of a function using bisection\"\n",
+    "    \n",
+    "    error = tol + 1\n",
+    "    it = 0\n",
+    "    \n",
+    "    while error > tol:\n",
+    "        x_mid = (x0 + x1)/2\n",
+    "\n",
+    "        if f(x_mid)*f(x0) < 0:\n",
+    "            x1 = x_mid\n",
+    "        else:\n",
+    "            x0 = x_mid\n",
+    "            \n",
+    "        error = abs(f(x_mid))\n",
+    "        \n",
+    "        # Guard against infinite loop\n",
+    "        it += 1\n",
+    "        if it >= max_it:\n",
+    "            print(\"Error - iteration count exceeded maximum of \", max_it)\n",
+    "            # print(\"Breaking out of while loop\") # Debug message\n",
+    "            break\n",
+    "\n",
+    "    # Return the approximate root, value of f(x) and the number of iterations \n",
+    "    return x_mid, f(x_mid), it\n",
+    "\n",
+    "x, f, num_it = compute_root(testf, x0=3, x1=6, tol=1.0e-6, max_it=1000)\n",
+    "print(x, f, num_it)\n",
+    "x, f, num_it = compute_root(my_f, x0=3, x1=6, tol=1.0e-6, max_it=1000)\n",
+    "print(round(x - 4.534070134162903, 10) == 0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -461,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -474,19 +566,54 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0000001192092896 9.536743306171047e-07 23\n",
+      "4.534070134162903 -7.047073751209609e-07 23\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "def compute_root(f, x0, x1, tol, max_it, it_count=0):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "def compute_root(f, x0, x1, tol, max_it, it_count=0): # it_count initialized in the argument part of the def\n",
+    "    \"Compute roots of a function using bisection, recusive function\"\n",
+    "    # increment it_count\n",
+    "    it_count += 1\n",
+    "    \n",
+    "    # bisection and reassigning boundary values\n",
+    "    x_mid = (x0 + x1)/2\n",
+    "    if f(x_mid)*f(x0) < 0:\n",
+    "        x1 = x_mid\n",
+    "    else:\n",
+    "        x0 = x_mid\n",
+    "    \n",
+    "    # Break if error is under tolerance\n",
+    "    error = abs(f(x_mid))\n",
+    "    if error < tol:\n",
+    "        return x_mid, f(x_mid), it_count\n",
+    "    \n",
+    "    # Break \n",
+    "    if it_count >= max_it:\n",
+    "        print(\"Maximum Iterations Reached - will show results with \", it_count, \" iterations.\")\n",
+    "        return x_mid, f(x_mid), it_count\n",
     "    \n",
     "    # Call compute_root recursively\n",
-    "    return compute_root(f, x0, x1, tol, max_it, it_count)"
+    "    return compute_root(f, x0, x1, tol, max_it, it_count)\n",
+    "\n",
+    "# Testing my code with the testf (root is 4 and -4) and my_f\n",
+    "x, f, num_it = compute_root(testf, x0=3, x1=6, tol=1.0e-6, max_it=1000)\n",
+    "print(x, f, num_it)\n",
+    "x, f, num_it = compute_root(my_f, x0=3, x1=6, tol=1.0e-6, max_it=1000)\n",
+    "print(x, f, num_it)\n",
+    "print( round(x - 4.534070134162903, 10) == 0.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -524,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
