--- a/05 Library functions.ipynb
+++ b/05 Library functions.ipynb
@@ -68,17 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.4142135623730951\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -118,15 +110,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.4142135623730951\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -148,15 +132,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.4142135623730951\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import sqrt as some_math_function \n",
     "\n",
@@ -185,15 +161,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.10435607626104004 -2.3956439237389597\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import sqrt as square_root\n",
     "\n",
@@ -222,16 +190,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-0.125+0.09682458365518543j) (-0.125-0.09682458365518543j)\n",
-      "(-0.10435607626104004+0j) (-2.3956439237389597+0j)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use the function from cmath as square_root to compute the square root\n",
     "# (this will replace the previously imported sqrt function)\n",
@@ -275,16 +234,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My name is Amber and I am 19 years old.\n",
-      "My name is Ashley and I am 21 years old.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Format a string with name and age\n",
     "name = \"Amber\"\n",
@@ -364,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[67, 75, 92, 90, 27, 13, 73, 29, 42, 9]\n"
+      "[55, 70, 48, 33, 29, 82, 94, 14, 73, 56]\n"
      ]
     }
    ],
@@ -390,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9, 13, 27, 29, 42, 67, 73, 75, 90, 92]\n"
+      "[14, 29, 33, 48, 55, 56, 70, 73, 82, 94]\n"
      ]
     }
    ],
@@ -417,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,19 +396,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process id: <ForkProcess(ForkPoolWorker-3, started daemon)>\n",
-      "Process id: <ForkProcess(ForkPoolWorker-2, started daemon)>\n",
-      "Process id: <ForkProcess(ForkPoolWorker-1, started daemon)>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = 20000\n",
     "with multiprocessing.Pool(processes=3) as p:\n",
@@ -478,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,23 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process id: <ForkProcess(ForkPoolWorker-4, started daemon)>\n",
-      "Process id: <ForkProcess(ForkPoolWorker-4, started daemon)>\n",
-      "Process id: <ForkProcess(ForkPoolWorker-4, started daemon)>\n",
-      "CPU times: user 54.6 ms, sys: 27.9 ms, total: 82.5 ms\n",
-      "Wall time: 1.67 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "N = 500000\n",
+    "N = 50000\n",
     "%time parallel_sort(N, 1)    "
    ]
   },
@@ -528,21 +456,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process id: <ForkProcess(ForkPoolWorker-6, started daemon)>\n",
-      "Process id: <ForkProcess(ForkPoolWorker-7, started daemon)>\n",
-      "Process id: <ForkProcess(ForkPoolWorker-5, started daemon)>\n",
-      "CPU times: user 58.5 ms, sys: 37.2 ms, total: 95.6 ms\n",
-      "Wall time: 753 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time parallel_sort(N, 4)    "
    ]
@@ -552,6 +468,31 @@
    "metadata": {},
    "source": [
     "We see from `Process id` that three different processes have worked on the lists. The parallel execution should be faster, but this can depends heavily on the CPU type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"ITS NOT WORKING NOOOO\"\n",
+    "\"Debug attempt\"\n",
+    "\n",
+    "\n",
+    "#import random\n",
+    "#import multiprocessing\n",
+    "\n",
+    "#def mysort(N):\n",
+    "#    x = random.sample(range(0,N), N)\n",
+    "#    print(multiprocessing.current_process())\n",
+    "#    return sorted(x)\n",
+    "#def parallel_sort(N, num_proc):\n",
+    "#    with multiprocessing.Pool(processes = num_proc) as p:\n",
+    "#        p.map(mysort, N)\n",
+    "\n",
+    "x = 1\n",
+    "print(x)"
    ]
   },
   {
@@ -580,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
