--- a/Exercises/05 Exercises.ipynb
+++ b/Exercises/05 Exercises.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -63,12 +63,13 @@
     "import random\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def dice_roll(n):\n",
+    "    return random.randint(1, n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -126,10 +127,22 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[989, 1054, 1013, 965, 978, 1001]\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "roll_count = [0, 0, 0, 0, 0, 0]\n",
+    "for i in range(6000):\n",
+    "    value = dice_roll(6)\n",
+    "    roll_count[value-1] += 1\n",
+    "print (roll_count)"
    ]
   },
   {
@@ -159,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -173,7 +186,18 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bytes'>\n",
+      "Number of bytes for uncompressed string: 785\n",
+      "Number of bytes for compressed string: 466\n",
+      "Compression efficiency:  0.5936305732484076\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the compression module\n",
     "import zlib\n",
@@ -247,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -261,7 +285,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KXFolwY4\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import string\n",
@@ -340,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -382,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -395,11 +427,37 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78500\n",
+      "925\n",
+      "Compression efficiency:  0.01178343949044586\n"
+     ]
+    }
+   ],
    "source": [
     "# Create string of Shakespeare passage repeated 100 times\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "# Repeat text 100 times, encode it somehow and print the number of bytes of this text100\n",
+    "text100 = text * 100\n",
+    "text100_bytes = text100.encode(\"utf-8\")\n",
+    "print(len(text100_bytes))\n",
+    "\n",
+    "text100_comp = zlib.compress(text100_bytes)\n",
+    "print(len(text100_comp))\n",
+    "\n",
+    "# Display the compression efficiency\n",
+    "print(\"Compression efficiency: \", len(text100_comp)/len(text100_bytes))\n",
+    "\n",
+    "# Decompress the string\n",
+    "text100_decomp = zlib.decompress(text100_comp)\n",
+    "# Check that original and decompressed string are the same (more on aseret)\n",
+    "if text100 != text100_decomp.decode(\"utf-8\"):\n",
+    "    print(\"Problem: original and decompressed string differ.\")"
    ]
   },
   {
@@ -423,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -436,10 +494,35 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78500\n",
+      "59034\n",
+      "Compression efficiency:  0.7520254777070063\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "text_rand = random_string(78500)\n",
+    "\n",
+    "text_rand_bytes = text_rand.encode(\"utf-8\")\n",
+    "print(len(text_rand_bytes))\n",
+    "\n",
+    "text_rand_comp = zlib.compress(text_rand_bytes)\n",
+    "print(len(text_rand_comp))\n",
+    "\n",
+    "# Display the compression efficiency\n",
+    "print(\"Compression efficiency: \", len(text_rand_comp)/len(text_rand_bytes))\n",
+    "\n",
+    "# Decompress the string\n",
+    "text_rand_decomp = zlib.decompress(text_rand_comp)\n",
+    "# Check that original and decompressed string are the same (more on aseret)\n",
+    "if text_rand != text_rand_decomp.decode(\"utf-8\"):\n",
+    "    print(\"Problem: original and decompressed string differ.\")"
    ]
   },
   {
@@ -463,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -477,10 +560,22 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Repeated Text compression efficiency:  0.01178343949044586\n",
+      "Random Text compression efficiency:  0.7520254777070063\n",
+      "Efficiency difference: factor of  63.820540540540534\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(\"Repeated Text compression efficiency: \", len(text100_comp)/len(text100_bytes))\n",
+    "print(\"Random Text compression efficiency: \", len(text_rand_comp)/len(text_rand_bytes))\n",
+    "print(\"Efficiency difference: factor of \", (len(text_rand_comp)/len(text_rand_bytes)) / (len(text100_comp)/len(text100_bytes)))"
    ]
   }
  ],
@@ -500,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
